tests/transpiler/x/php/json_builtin.error
run: exit status 255

Warning: Undefined variable $a in /workspace/mochi/tests/transpiler/x/php/json_builtin.php on line 2

Warning: Undefined variable $b in /workspace/mochi/tests/transpiler/x/php/json_builtin.php on line 2

Fatal error: Uncaught Error: Call to undefined function json() in /workspace/mochi/tests/transpiler/x/php/json_builtin.php:3
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/transpiler/x/php/json_builtin.php on line 3
